--- a/src/components/secciones-principales/feed/feed.html
+++ b/src/components/secciones-principales/feed/feed.html
@@ -1,3 +1,11 @@
+<routine-preview
+  [FullscreenOverlay]="isRoutinePreviewVisible"
+  (close)="isRoutinePreviewVisible = modalToggler.closeModal()"
+></routine-preview>
+<modal-calificar
+  [FullscreenOverlay]="isRatingModalVisible"
+  (close)="isRatingModalVisible = modalToggler.closeModal()"
+></modal-calificar>
 <modal-comentarios
   [FullscreenOverlay]="isCommentsModalVisible"
   (closeButtonClick)="isCommentsModalVisible = modalToggler.closeModal()"
@@ -8,7 +16,11 @@
     descripcion="Explora, califica y agrega rutinas de otros usuarios"
   ></cabecera>
   <div class="feed-grid">
-    <feed-card (clickComment)="isCommentsModalVisible = modalToggler.showModal()"></feed-card>
+    <feed-card
+      (clickComment)="isCommentsModalVisible = modalToggler.showModal()"
+      (clickRoutine)="isRatingModalVisible = modalToggler.showModal()"
+      (clickView)="isRoutinePreviewVisible = modalToggler.showModal()"
+    ></feed-card>
     <feed-card></feed-card>
     <feed-card></feed-card>
     <feed-card></feed-card>
