--- a/src/components/cards/feed-card/feed-card.css
+++ b/src/components/cards/feed-card/feed-card.css
@@ -35,7 +35,8 @@
 .fecha-creacion,
 .autor,
 .dificultad,
-.calificacion {
+.calificacion,
+.grupos-musculares {
   font-size: 0.8rem;
   color: var(--alternative-gray-font-color);
 }
@@ -72,6 +73,6 @@
   height: 30px;
 }
 
-.autor-detalles > * {
-  flex: 1;
+.autor-detalles {
+  gap: 0.5rem;
 }
