--- a/src/components/comments-section-components/comment-component/comment-component.html
+++ b/src/components/comments-section-components/comment-component/comment-component.html
@@ -12,6 +12,14 @@
       ut! Tenetur quis necessitatibus corporis ab quae nemo impedit corrupti. Illo, voluptatibus
       tempora.</span
     >
-    <div class="comment-date">15 sept 25</div>
+    <div class="comment-options">
+      <div class="like-button">
+        <img src="/heart.png" alt="like-comment-icon" />
+        <span style="font-weight: bold">100</span>
+      </div>
+      <button>Editar</button>
+      <button>Eliminar</button>
+      <div class="comment-date">15 sept 25</div>
+    </div>
   </div>
 </div>
