--- a/src/components/modals/modal-comentarios/modal-comentarios.html
+++ b/src/components/modals/modal-comentarios/modal-comentarios.html
@@ -1,5 +1,5 @@
 <div class="modal-wrapper">
-  <div class="modal-component flex-column">
+  <div class="modal-component flex-column modal-comentarios-wrapper">
     <header class="flex-between">
       <h3>Comentarios (10)</h3>
       <button class="close-button" (click)="onCloseButtonClick()">X</button>
