--- a/src/components/modals/modal-notas/modal-notas.html
+++ b/src/components/modals/modal-notas/modal-notas.html
@@ -6,6 +6,17 @@
     </div>
     <input type="text" placeholder="Titulo de la nota" />
     <textarea placeholder="Escribe tu nota"></textarea>
+    <div class="select-wrapper flex-column" style="gap: 0.5rem">
+      <label for="" class="blue-font-color" style="font-weight: bold"
+        >Selecciona la rutina a la que se vinculará la nota</label
+      >
+      <select>
+        <option value="rutina-1">Rutina 1</option>
+        <option value="rutina-2">Rutina 2</option>
+        <option value="rutina-3">Rutina 3</option>
+        <option value="rutina-4">Rutina 4</option>
+      </select>
+    </div>
     <button class="default-button">Aceptar</button>
   </div>
 </div>
