--- a/src/components/secciones-principales/mis-rutinas/mis-rutinas.html
+++ b/src/components/secciones-principales/mis-rutinas/mis-rutinas.html
@@ -3,6 +3,7 @@
   [class.isVisible]="isExerciseComponentVisible"
   (close)="isExerciseComponentVisible = modalToggler.closeModal()"
 ></agregar-ejercicios>
+<!--<modal-notas-vinculadas></modal-notas-vinculadas>-->
 <div class="flex-column wrapper">
   <cabecera titulo="Mis rutinas" descripcion="Las mejores rutinas creadas por ti"></cabecera>
   <div class="crear-rutina">
