--- a/src/components/secciones-principales/rest-section/rest-section.html
+++ b/src/components/secciones-principales/rest-section/rest-section.html
@@ -1,3 +1,4 @@
+<!--<modal-ayuda-ejercicio></modal-ayuda-ejercicio>-->
 <div class="rest-section-root flex-column">
   <div class="next-exercise">
     <img src="https://static.exercisedb.dev/media/EcaV7aL.gif" alt="" />
@@ -5,7 +6,12 @@
   <div class="info-section flex-column">
     <div class="exercise-info">
       <div class="next-exercise-index">SIGUIENTE 1/16</div>
-      <div class="nombre-reps">PRESS BANCA x16</div>
+      <div style="display: flex; gap: 0.5rem; align-items: center">
+        <div class="nombre-reps">PRESS BANCA x16</div>
+        <div class="help-icon-wrapper">
+          <img src="/icons8-help-50.png" alt="help-icon" />
+        </div>
+      </div>
     </div>
     <div class="rest-time-wrapper" style="display: grid; place-items: center; gap: 0.75rem">
       DESCANSO
