--- a/src/components/forms/signup-form/signup-form.css
+++ b/src/components/forms/signup-form/signup-form.css
@@ -41,7 +41,12 @@ section > div {
   gap: 1rem;
 }
 
-input {
+select {
+  background-color: var(--secondary-color);
+}
+
+input,
+select {
   border: 1px solid var(--border-color);
   transition: border 0.5s ease-in 0s;
 }
@@ -52,7 +57,8 @@ button {
 }
 
 button,
-input {
+input,
+select {
   padding: 0.5rem 1rem;
 }
 
@@ -96,6 +102,17 @@ a {
 
 input:focus {
   border: 1px solid var(--primary-color);
+}
+
+section.fecha-genero {
+  display: flex;
+  gap: 0.5rem;
+}
+
+section.fecha-genero > * {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .signup-form {
