--- a/src/components/forms/signup-form/signup-form.html
+++ b/src/components/forms/signup-form/signup-form.html
@@ -20,6 +20,19 @@
       <label for="">Confirmar contraseña</label>
       <input type="password" />
     </div>
+    <section class="fecha-genero">
+      <div>
+        <label for="">Fecha de nacimiento</label>
+        <input type="date" />
+      </div>
+      <div>
+        <label for="">Sexo</label>
+        <select>
+          <option value="masculino">Masculino</option>
+          <option value="femenino">Femenino</option>
+        </select>
+      </div>
+    </section>
   </section>
   <button type="submit" class="boton-registrar">Registrar</button>
   <div class="o">o</div>
