--- a/src/components/secciones-principales/perfil/perfil.html
+++ b/src/components/secciones-principales/perfil/perfil.html
@@ -6,7 +6,7 @@
 <div class="flex-column" id="profile-wrapper">
   <div class="foto-portada">
     <div class="foto-perfil">
-      <img src="/stock-profile/drose.jpg" alt="user-pfp" />
+      <img src="/frog.jpg" alt="user-pfp" />
     </div>
   </div>
   <div class="flex-column user-info">
