sección de perfil casi terminada (frontend)

--- a/proyecto-angular-frontend/src/components/forms/login-form/login-form.html
+++ b/proyecto-angular-frontend/src/components/forms/login-form/login-form.html
@@ -12,6 +12,12 @@
       <label for="">Contraseña</label>
       <input type="password" />
     </div>
+    <div class="recordar" id="recordar">
+      <div style="display: flex; gap: 0.5rem">
+        <input type="checkbox" />
+        <label for="">Mantener sesión iniciada</label>
+      </div>
+    </div>
   </section>
   <button type="submit" class="boton-registrar">Iniciar sesión</button>
   <div class="o">o</div>
