--- a/proyecto-angular-frontend/src/components/modals/edit-profile-modal/edit-profile-modal.html
+++ b/proyecto-angular-frontend/src/components/modals/edit-profile-modal/edit-profile-modal.html
@@ -2,12 +2,12 @@
   <div class="modal-component edit-profile-modal flex-column">
     <header class="flex-between">
       <h3 class="blue-font-color">Edición de perfil</h3>
-      <button class="close-button">X</button>
+      <button class="close-button" (click)="closeEditProfileModal()">X</button>
     </header>
     <section class="profile-images">
       <div class="foto-portada">
         <div class="pfp">
-          <img src="/stock-profile/drose.jpg" alt="stock-pfp-drose" />
+          <img src="/frog.jpg" alt="stock-pfp-drose" />
         </div>
       </div>
     </section>
