--- a/proyecto-angular-frontend/src/components/modals/modal-info-personal/modal-info-personal.html
+++ b/proyecto-angular-frontend/src/components/modals/modal-info-personal/modal-info-personal.html
@@ -2,7 +2,7 @@
   <div class="modal-component flex-column">
     <header class="flex-between" style="gap: 1.5rem">
       <h3 class="blue-font-color">Edita tu altura y tu peso</h3>
-      <button class="close-button">X</button>
+      <button class="close-button" (click)="onCloseButtonClick()">X</button>
     </header>
     <input type="text" placeholder="Altura en cm" />
     <input type="text" placeholder="Peso en kg" />
