--- a/proyecto-angular-frontend/src/components/modals/modal-logros-usuario/modal-logros-usuario.html
+++ b/proyecto-angular-frontend/src/components/modals/modal-logros-usuario/modal-logros-usuario.html
@@ -2,7 +2,7 @@
   <div class="modal-component flex-column logros-modal-component">
     <header class="flex-between">
       <h3 class="blue-font-color">Logros</h3>
-      <button class="close-button">X</button>
+      <button class="close-button" (click)="onCloseButtonClick()">X</button>
     </header>
     <div>
       <span class="numero-logros">3/30</span>
