--- a/proyecto-angular-frontend/src/components/secciones-principales/perfil/perfil.css
+++ b/proyecto-angular-frontend/src/components/secciones-principales/perfil/perfil.css
@@ -167,6 +167,9 @@ h3 {
   position: absolute;
   box-shadow: var(--box-shadow);
   border-radius: 1rem;
+  top: 0;
+  right: 0;
+  transform: translateY(50%);
 }
 
 .opciones > * {
