--- a/proyecto-angular-frontend/src/components/cards/feed-card/feed-card.html
+++ b/proyecto-angular-frontend/src/components/cards/feed-card/feed-card.html
@@ -1,3 +1,15 @@
+<routine-preview
+  [FullscreenOverlay]="isRoutinePreviewModalVisible"
+  (close)="isRoutinePreviewModalVisible = modalToggler.closeModal()"
+></routine-preview>
+<modal-comentarios
+  [FullscreenOverlay]="isCommentsModalVisible"
+  (closeButtonClick)="isCommentsModalVisible = modalToggler.closeModal()"
+></modal-comentarios>
+<modal-calificar
+  [FullscreenOverlay]="isCalificationModalVisible"
+  (close)="isCalificationModalVisible = modalToggler.closeModal()"
+></modal-calificar>
 <div class="feed-card flex-column">
   <div class="info-usuario">
     <div class="pfp">
@@ -17,10 +29,17 @@
       <span class="calificacion">Calificación promedio: 4.5/5</span>
       <span class="grupos-musculares">Pierna</span>
     </div>
-    <button class="default-button" (click)="onViewClick()">Ver</button>
+    <button
+      class="default-button"
+      (click)="isRoutinePreviewModalVisible = modalToggler.showModal()"
+    >
+      Ver
+    </button>
     <div style="display: flex; gap: 0.5rem; flex-wrap: wrap">
       <button class="default-button" style="flex: 1">Eliminar</button>
-      <button class="default-button" style="flex: 1">Editar</button>
+      <button class="default-button" style="flex: 1" (click)="navigation.toEditPublication()">
+        Editar
+      </button>
     </div>
   </div>
   <div class="opciones">
@@ -31,10 +50,10 @@
       <div>
         <img src="/feed-card-icons/icons8-add-50.png" alt="agregar-rutina-icono" />
       </div>
-      <div (click)="onCommentClick()">
+      <div (click)="isCommentsModalVisible = modalToggler.showModal()">
         <img src="/feed-card-icons/icons8-comments-48.png" alt="comentarios-icono" />
       </div>
-      <div (click)="onRatingClick()">
+      <div (click)="isCalificationModalVisible = modalToggler.showModal()">
         <img src="/feed-card-icons/icons8-star-50.png" alt="calificar-icono" />
       </div>
     </div>
