--- a/proyecto-angular-frontend/src/components/modals/cambiar-contrasena/cambiar-contrasena.html
+++ b/proyecto-angular-frontend/src/components/modals/cambiar-contrasena/cambiar-contrasena.html
@@ -2,12 +2,12 @@
   <div class="modal-component">
     <header class="flex-between" style="margin-bottom: 1rem">
       <h3 class="blue-font-color">Cambiar contraseña</h3>
-      <button class="close-button">X</button>
+      <button class="close-button" (click)="onCloseButtonClick()">X</button>
     </header>
     <div class="flex-column cambiar-usuario-wrapper">
       <input type="text" placeholder="Contraseña actual" />
       <input type="text" placeholder="Nueva contraseña" />
-      <button class="default-button">Cambiar usuario</button>
+      <button class="default-button">Actualizar contraseña</button>
     </div>
   </div>
 </div>
